# gizmo

./: .gitignore  .gitmodules  Cargo.toml  NOTICE.md  README.md  compose.yml
.cargo/: config.toml
gizmio/: Cargo.toml  README.md
gizmio/src/: lib.rs  macros.rs  request.rs  response.rs
gizmio/src/api/: bytes.rs  deserialize.rs  dialects.rs  error.rs  format.rs  mod.rs  serialize.rs  versions.rs
gizmio/src/dialects/: janus.rs  mod.rs  neptune.rs  sqlg.rs  tinker.rs
gizmio/src/formats/: mod.rs
gizmio/src/formats/binary/: mod.rs
gizmio/src/formats/binary/v1/: mod.rs
gizmio/src/formats/graphson/: mod.rs  utils.rs
gizmio/src/formats/graphson/tests/sanity/: diff.rs  macros.rs  mod.rs  v2.rs  v3.rs
gizmio/src/formats/graphson/v2/aux/: gvalue.rs  option.rs  response.rs
gizmio/src/formats/graphson/v2/core/: date.rs  float.rs  map.rs
gizmio/src/formats/graphson/v2/process/: bytecode.rs  direction.rs  merge.rs  metrics.rs  scope.rs  textp.rs  traversal_metrics.rs  traverser.rs
gizmio/src/formats/graphson/v2/structure/: edge.rs  mod.rs  property.rs  stargraph.rs  vertex.rs  vertexproperty.rs
gizmio/src/formats/graphson/v3/: mod.rs
gizmio/src/formats/graphson/v3/aux/: gid.rs  mod.rs  request.rs  response.rs
gizmio/src/formats/graphson/v3/core/: bool.rs  date.rs  double.rs  float.rs  list.rs  long.rs  set.rs  timestamp.rs
gizmio/src/formats/graphson/v3/extended/: geometry.rs
gizmio/src/formats/graphson/v3/process/: bulkset.rs  cardinality.rs  dt.rs  lambda.rs  metrics.rs  mod.rs  pop.rs  scope.rs  traversal_metrics.rs
gizmio/src/formats/graphson/v3/structure/: edge.rs  property.rs  tinkergraph.rs  vertexproperty.rs
gizmio/src/formats/typing/: mod.rs  tags.rs
gizmio/src/types/: gvalue.rs  mod.rs  primitive.rs
gizmio/src/types/process/: bytecode.rs  direction.rs  metrics.rs  mod.rs  p.rs  traversal_metrics.rs
gizmio/src/types/structure/: bulk.rs  datetime.rs  edge.rs  geometry.rs  gid.rs  label.rs  list.rs  map.rs  mod.rs  set.rs  star.rs  tinker.rs  traverser.rs  tree.rs  uuid.rs  value.rs  vertex.rs  vertex_property.rs
gizmo/: Cargo.toml
gizmo/src/: client.rs  error.rs  lib.rs  options.rs
gizmo/src/network/: cmd.rs  connection.rs  manage.rs  mod.rs  receiver.rs  sender.rs  socket.rs  sugar.rs
gizmo/src/network/socket/: mod.rs  receiver.rs  sender.rs
gizmo/src/traversal/: anonymous_traversal_source.rs  builder.rs  graph_traversal.rs  graph_traversal_source.rs  mod.rs  predicates.rs  remote.rs
gizmo/src/traversal/step/: by.rs  choose.rs  coalesce.rs  dedup.rs  from.rs  has.rs  limit.rs  local.rs  loops.rs  match_step.rs  merge_edge.rs  merge_vertex.rs  mod.rs  not.rs  option.rs  or.rs  repeat.rs  select.rs  side_effect.rs  to.rs  until.rs  where_step.rs
gizmo/src/traversal/strategies/: remote.rs
structure/: Cargo.toml
structure/src/: error.rs  lib.rs  primitive.rs
structure/src/io/: api.rs  error.rs  macros.rs  mod.rs  response.rs  seal.rs
structure/src/io/graphson/: key.rs  mod.rs  tags.rs  versions.rs
structure/src/io/graphson/tests/: diff.rs  mod.rs  v2.rs  v3.rs
structure/src/io/graphson/v2/: mod.rs  request.rs  response.rs  value.rs
structure/src/io/graphson/v2/core/: bool.rs  class.rs  date.rs  double.rs  float.rs  integer.rs  list.rs  long.rs  map.rs  set.rs  string.rs  timestamp.rs  uuid.rs
structure/src/io/graphson/v2/process/: bytecode.rs  cardinality.rs  column.rs  direction.rs  merge.rs  metrics.rs  mod.rs  p.rs  pop.rs  t.rs  textp.rs  traversal_metrics.rs
structure/src/io/graphson/v2/structure/: edge.rs  mod.rs  path.rs  property.rs  stargraph.rs  tinkergraph.rs  tree.rs  vertex.rs  vertexproperty.rs
structure/src/io/graphson/v3/: mod.rs  response.rs  ser.rs
structure/src/io/graphson/v3/core/: bool.rs  date.rs  double.rs  list.rs  map.rs  set.rs  string.rs  timestamp.rs
structure/src/io/graphson/v3/extended/: geometry.rs
structure/src/io/graphson/v3/process/: bulkset.rs  metrics.rs  t.rs  traversal_metrics.rs
structure/src/io/graphson/v3g/: de.rs  mod.rs
structure/src/io/graphson/value/: mod.rs  v2.rs  v3.rs
structure/src/values/: bulk.rs  bytecode.rs  cardinality.rs  datetime.rs  edge.rs  either.rs  geometry.rs  gid.rs  list.rs  map.rs  merge.rs  metrics.rs  mod.rs  order.rs  p.rs  path.rs  scope.rs  set.rs  star.rs  text_p.rs  tinker.rs  value.rs  vertex.rs  vertex_property.rs
(+577 files in other folders)
