[package]
authors = ["Ech0riginal <samwatkins94@me.com>"]
name = "gizmio"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
bytes               = "1.10.1"
#Avoids bringing in time crate (https://github.com/time-rs/time/issues/293)
chrono              = { version = "0.4.41", default-features = false, features = ["serde"] }
const_format        = "0.2.34"
derive_builder      = { version = "0.20.2" }
geo-types           = { version = "0.7.16" }
geojson             = { version = "0.24.2", features = ["geo-types"] }
indexmap            = { version = "2.9.0", features = ["serde"] }
lazy_static         = { version = "1.5.0" }
serde               = { version = "1.0.219" }
serde_json          = { version = "1.0.140", features = ["arbitrary_precision"] }
snafu               = { version = "0.8.8" }
uuid                = { version = "1.17.0", features = ["serde", "v4"] }

tracing             = { version = "0.1.41", features = ["default"], optional = true }
http = "1.3.1"

[features]
tracing     = ["dep:tracing"]


test_janus          = []
test_neptune        = []
test_sqlg           = []
test_tinkergraph    = []



happy_paths = [] 