[package]
name = "structure"
version = "0.1.0"
edition = "2024"

[dependencies]
#Avoids bringing in time crate (https://github.com/time-rs/time/issues/293)
chrono              = { version = "0.4.41", default-features = false, features = ["serde"] }
derive_builder      = { version = "0.20.2" }
geo-types           = { version = "0.7.16" }
indexmap            = { version = "2.9.0", features = ["serde"] }
lazy_static         = { version = "1.5.0" }
serde               = { version = "1.0.219" }
serde_json          = { version = "1.0.140", features = ["arbitrary_precision"] }
thiserror           = { version = "2.0.12" }
uuid                = { version = "1.16.0", features = ["serde", "v4"] }
tracing             = { version = "0.1.41", features = ["default"] }

